syntax = "proto3";

package monolith;

message Error {
    string message = 1;
}

message Session {
    string session_id = 1;
}

message Page {
    string page_id = 1;
    string session = 2;
}

message Variable {
    string variable_id = 1;
    string page = 2;
    string name = 3;
    string formula = 4;
}
