syntax = "proto3";

package monolith;

import "domain.proto";

service Pages {
    rpc CreatePage (CreatePageRequest) returns (CreatePageResponse) {}
    rpc GetPages (GetPagesRequest) returns (GetPagesResponse) {}
    rpc FindPages (FindPagesRequest) returns (FindPagesResponse) {}
}

message CreatePageRequest {
    string session = 1;
}

message CreatePageResponse {
    Error error = 1;
    Page page = 2;
}

message GetPagesRequest {
    repeated string page_ids = 1;
}

message GetPagesResponse {
    Error error = 1;
    repeated Page pages = 2;
}

message FindPagesRequest {
    string session = 1;
}

message FindPagesResponse {
    Error error = 1;
    repeated Page pages = 2;
}